fixbug: mirror环境变量优先级调整

--- a/.github/workflows/.build.yaml
+++ b/.github/workflows/.build.yaml
@@ -91,8 +91,10 @@ jobs:
             latest=false
           tags: |
             type=raw,value=latest,enable={{is_default_branch}}
-            type=semver,pattern={{version}}
-            type=raw,value=test,prefix=ci/,enable=true
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+#            type=raw,value=test,prefix=ci/,enable=true
 
       # Print artifacts and environment variables
       - name: Print env
