--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -2,9 +2,9 @@ name: Build images
 
 on:
   pull_request:
-    branches: ['main']
+    branches: ['master']
   push:
-    branches: ['main']
+    branches: ['master']
     tags: ['v[0-9]+.[0-9]+.[0-9]+*']
 
 env:
