--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -5,7 +5,7 @@ on:
     branches: ['master']
   push:
     branches: ['master']
-    tags: ['v[0-9]+.[0-9]+.[0-9]+*']
+    tags: ['[0-9]+.[0-9]+.[0-9]+*']
 
 env:
   # Use docker.io for Docker Hub if empty
